--- a/quake_analysis.ipynb
+++ b/quake_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9JP/zfAjNv6CFu4WX2My/"
+      "authorship_tag": "ABX9TyP02+v8raYeLuR3Nnzdf8rz"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,24 +20,27 @@
       "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import numpy as np"
       ],
       "metadata": {
         "id": "dcVy2FG7RcCc"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "2dMHaQQxNzik",
-        "outputId": "cc2ba478-6753-4013-9caa-a7812257853b"
+        "outputId": "3b3fcdff-fd31-42d7-a4c2-3e00fe6a7b8e"
       },
       "outputs": [
         {
@@ -129,7 +132,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3915135129.py:58: FutureWarning: \n",
+            "/tmp/ipython-input-1223766726.py:58: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -150,7 +153,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3915135129.py:64: FutureWarning: \n",
+            "/tmp/ipython-input-1223766726.py:64: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -200,7 +203,9 @@
             "1   34.884164  \n",
             "2   35.229552  \n",
             "3   36.265715  \n",
-            "4   33.848001  \n"
+            "4   33.848001  \n",
+            "Train shape: (1040, 19)\n",
+            "Test shape: (260, 19)\n"
           ]
         }
       ],
@@ -280,7 +285,6 @@
         "\n",
         "\n",
         "# 1. Depth Category (Shallow / Intermediate / Deep)\n",
-        "# Earthquakes are often categorized by depth ranges in seismology\n",
         "def depth_category(depth):\n",
         "    if depth < 70:\n",
         "        return \"shallow\"\n",
@@ -294,17 +298,14 @@
         "\n",
         "# 2. Seismic Energy Release (approximation)\n",
         "# Formula: E = 10^(1.5M + 4.8), where M is magnitude\n",
-        "# This converts magnitude into actual energy released (in Joules)\n",
         "df[\"energy_release\"] = 10 ** (1.5 * df[\"magnitude\"] + 4.8)\n",
         "\n",
         "\n",
         "# 3. Magnitude-to-Depth Ratio\n",
-        "# Strong shallow quakes are usually more damaging, so we combine the two\n",
-        "df[\"mag_depth_ratio\"] = df[\"magnitude\"] / (df[\"depth\"] + 1)  # +1 avoids division by zero\n",
+        "df[\"mag_depth_ratio\"] = df[\"magnitude\"] / (df[\"depth\"] + 1)\n",
         "\n",
         "\n",
         "# 4. Binned Features\n",
-        "# Sometimes bins make patterns easier for ML models to learn\n",
         "df[\"magnitude_bin\"] = pd.cut(\n",
         "    df[\"magnitude\"],\n",
         "    bins=[0, 4, 5, 6, 7, 10],\n",
@@ -319,26 +320,63 @@
         "\n",
         "\n",
         "# 5. Interaction Features\n",
-        "# Capturing combined effects between magnitude and intensity scales\n",
         "df[\"mag_x_cdi\"] = df[\"magnitude\"] * df[\"cdi\"]\n",
         "df[\"mag_x_mmi\"] = df[\"magnitude\"] * df[\"mmi\"]\n",
         "\n",
         "\n",
         "# 6. Log Transformations\n",
-        "# Depth and energy are often skewed, so logs make distributions more normal\n",
-        "df[\"log_depth\"] = np.log1p(df[\"depth\"])           # log(1 + depth)\n",
-        "df[\"log_energy\"] = np.log1p(df[\"energy_release\"]) # log(1 + energy)\n",
+        "df[\"log_depth\"] = np.log1p(df[\"depth\"])\n",
+        "df[\"log_energy\"] = np.log1p(df[\"energy_release\"])\n",
         "\n",
         "\n",
-        "# -----------------------------\n",
-        "# Quick Check of New Columns\n",
-        "# -----------------------------\n",
+        "\n",
         "print(df[[\n",
         "    \"magnitude\", \"depth\", \"cdi\", \"mmi\", \"sig\",\n",
         "    \"depth_category\", \"energy_release\", \"mag_depth_ratio\",\n",
         "    \"magnitude_bin\", \"depth_bin\", \"mag_x_cdi\", \"mag_x_mmi\",\n",
         "    \"log_depth\", \"log_energy\"\n",
         "]].head())\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "df = df.dropna(subset=['magnitude', 'depth', 'cdi', 'mmi', 'sig', 'alert'])\n",
+        "\n",
+        "\n",
+        "df['cdi'] = df['cdi'].fillna(df['cdi'].median())\n",
+        "df['mmi'] = df['mmi'].fillna(df['mmi'].median())\n",
+        "df['sig'] = df['sig'].fillna(df['sig'].median())\n",
+        "\n",
+        "\n",
+        "label_encoder = LabelEncoder()\n",
+        "df['alert_encoded'] = label_encoder.fit_transform(df['alert'])\n",
+        "\n",
+        "\n",
+        "df = pd.get_dummies(df, columns=['depth_category', 'magnitude_bin', 'depth_bin'], drop_first=True)\n",
+        "\n",
+        "\n",
+        "feature_columns = [\n",
+        "    \"magnitude\", \"depth\", \"cdi\", \"mmi\", \"sig\",\n",
+        "    \"energy_release\", \"mag_depth_ratio\", \"mag_x_cdi\", \"mag_x_mmi\",\n",
+        "    \"log_depth\", \"log_energy\"\n",
+        "]\n",
+        "categorical_cols = [col for col in df.columns if \"depth_category_\" in col or\n",
+        "                    \"magnitude_bin_\" in col or \"depth_bin_\" in col]\n",
+        "\n",
+        "X = df[feature_columns + categorical_cols]\n",
+        "y = df[\"alert_encoded\"]\n",
+        "\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)\n",
+        "\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X_scaled, y, test_size=0.2, random_state=42, stratify=y\n",
+        ")\n",
+        "\n",
+        "print(\"Train shape:\", X_train.shape)\n",
+        "print(\"Test shape:\", X_test.shape)\n",
         "\n"
       ]
     }
